src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_public_methode.deca
// Description:
//    tests de programme incorrect class protected
//
// Resultats:
//    Ligne 12 : Erreur (no visibility public)
//    
//
// Historique:
//    cree le 04/01/2023

class A{
    int x = 8;
    public void calcul(){
        this.x = 4;
    }
}